--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
 	"displayName": "scss-format",
 	"publisher": "xxxxst",
 	"description": "format scss/css as single line",
-	"version": "0.0.1",
+	"version": "0.0.2",
 	"license": "MIT",
+	"icon": "doc/log128.png",
 	"homepage": "https://github.com/xxxxst/vscode-scss-format",
 	"repository": {
         "type": "git",
